fix: home page video overflow

--- a/packages/nuejs.org/@lib/technical-content.css
+++ b/packages/nuejs.org/@lib/technical-content.css
@@ -142,6 +142,7 @@ article {
   > video {
     border-radius: 6px;
     cursor: pointer;
+    max-width: 100%;
 
     &:active {
       transform: scale(.995);
